Updating unit tests to use JUnit 5 (#6)
Updating unit tests to use JUnit 5